@@ -212,6 +212,8 @@ void mgl_set_caxis(HMGL graph, mreal C1,mreal C2);
 void mgl_set_axis(HMGL graph, mreal x1, mreal y1, mreal z1, mreal x2, mreal y2, mreal z2, mreal x0, mreal y0, mreal z0);
 void mgl_set_axis_3d(HMGL graph, mreal x1, mreal y1, mreal z1, mreal x2, mreal y2, mreal z2);
 void mgl_set_axis_2d(HMGL graph, mreal x1, mreal y1, mreal x2, mreal y2);
+inline void mgl_set_ranges(HMGL graph, mreal x1, mreal x2, mreal y1, mreal y2, mreal z1, mreal z2)
+{	mgl_set_axis_3d(graph, x1,y1,z1,x2,y2,z2);	};
 void mgl_set_origin(HMGL graph, mreal x0, mreal y0, mreal z0);
 void mgl_set_tick_origin(HMGL graph, mreal x0, mreal y0, mreal z0);
 void mgl_set_crange(HMGL graph, const HMDT a, int add);
