@@ -23,6 +23,7 @@
 #include <string.h>
 #ifndef NO_GSL
 #include <gsl/gsl_sf.h>
+#include <gsl/gsl_rng.h>
 #include <gsl/gsl_errno.h>
 #endif
 #include "mgl/mgl_eval.h"
@@ -118,63 +119,38 @@ EQ_EN,
 EQ_CL,		// Clausen function
 };
 //-----------------------------------------------------------------------------
-#define IM1 2147483563
-#define IM2 2147483399
-#define AM (1.0/IM1)
-#define IA1 40014
-#define IA2 40692
-#define IQ1 53668
-#define IQ2 52774
-#define IR1 12211
-#define IR2 3791
-#define NTAB 32
-#define NDIV (1+(IM1-1)/NTAB)
-#define RNMX (1.0 - 1.2e-7)
 #ifndef M_PI
 #define M_PI       3.14159265358979323846
 #endif
 //-----------------------------------------------------------------------------
-static long mgl_idum=0;
-void mgl_srnd(long seed)	{	mgl_idum = -abs(seed);	}
-//-----------------------------------------------------------------------------
+gsl_rng *mgl_rng=0;
+void mgl_srnd(long seed)
+{
+#ifndef NO_GSL
+	if(mgl_rng==0)
+	{
+		gsl_rng_env_setup();
+		mgl_rng = gsl_rng_alloc(gsl_rng_default);
+	}
+	gsl_rng_set(mgl_rng, seed);
+#else
+	srand(seed);
+#endif
+}
 double mgl_rnd()
 {
-	long &idum=mgl_idum;
-	long j;
-	long k;
-	static long idum2=123456789;
-	static long iy=0;
-	static long iv[NTAB];
-	double temp;
-	if(mgl_idum==0)
-		mgl_idum = -(long)(time(NULL));
-	if (mgl_idum <= 0) { 				// Initialize.
-		if (-(idum) < 1) idum=1;	// Be sure to prevent idum = 0.
-		else idum = -(idum);
-		idum2=(idum);
-		for (j=NTAB+7;j>=0;j--) {	// Load the shuffle table (after 8 warm-ups).
-			k=(idum)/IQ1;
-			idum=IA1*(idum-k*IQ1)-k*IR1;
-			if (idum < 0) idum += IM1;
-			if (j < NTAB) iv[j] = idum;
-		}
-		iy=iv[0];
+#ifndef NO_GSL
+	if(mgl_rng==0)
+	{
+		gsl_rng_env_setup();
+		mgl_rng = gsl_rng_alloc(gsl_rng_default);
+		gsl_rng_set(mgl_rng, time(0));
 	}
-	k=(idum)/IQ1; 					// Start here when not initializing.
-	idum=IA1*(idum-k*IQ1)-k*IR1;	// Compute idum=(IA1*idum) % IM1 without
-									// over ows by Schrage's method.
-	if (idum < 0) idum += IM1;
-	k=idum2/IQ2;
-	idum2=IA2*(idum2-k*IQ2)-k*IR2;	// Compute idum2=(IA2*idum) % IM2 likewise.
-	if (idum2 < 0) idum2 += IM2;
-	j=iy/NDIV; 						// Will be in the range 0..NTAB-1.
-	iy=iv[j]-idum2;					// Here idum is shufted, idum and idum2 are
-									// combined to generate output.
-	iv[j] = idum;
-	if (iy < 1) iy += IM1-1;
-	if ((temp=AM*iy) > RNMX)	// Because users don't expect endpoint values.
-		return RNMX;
-	else return temp;
+	return gsl_rng_uniform(mgl_rng);
+//	gsl_rng_free(r);
+#else
+	return rand()/(RND_MAX-1.);
+#endif
 }
 //-----------------------------------------------------------------------------
 double mgl_ipow(double x,int n);
